--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,40 @@
 // Navigation code here
+nav{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:40%;
+    margin-left:380px;
+    margin-bottom:20px;
+
+    @media @phone{
+        display:flex;
+
+        
+        margin-left:0;
+        width:100%;
+    }
+    h1{
+        font-size:4rem;
+        margin:20px;
+    }
+
+    .nav{
+        @media @phone {
+            display:flex;
+            font-size:1.6rem;
+            width:100%;
+            margin-left:50px;
+        }
+    }
+    a{
+        font-size:2rem;
+        margin:15px;
+        
+        @media @phone {
+            
+            margin:10px;
+            
+        }
+    }
+}
