--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,16 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css?family=Coustard&display=swap');
+
 // Home Content
-
-.custom-btn(@bg-color, @font-color){
-  background-color: @bg-color;
-  margin: 0 10px 20px;
-  width: 120px;
-  height: 40px;
-  font-size: 2rem;
-  border-radius: 10px;
-  color:@font-color;
-}
 .home {
-
+  .main-font();
   .intro {
     a img{
       border-radius:10px;
