--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,18 @@
 // Mixins Here
+.main-font(){
+    font-family: 'Coustard', serif;
+}
+
+.color(){
+    background-color:#808080;
+}
+//parametric mixin
+.custom-btn(@bg-color, @font-color){
+    background-color: @bg-color;
+    margin: 0 10px 20px;
+    width: 120px;
+    height: 40px;
+    font-size: 2rem;
+    border-radius: 10px;
+    color:@font-color;
+  }
